add tablet.css pc.css and add p to contact section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/form.css">
+    <link rel="stylesheet" href="./assets/css/tablet.css" media="(min-width: 700px">
+    <link rel="stylesheet" href="./assets/css/pc.css" media="(min-width: 1000px">
     <title>AluraGeek</title>
 </head>
 <body>
@@ -53,6 +55,7 @@
                 <div class="product-cards-container">
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_6FDXGY9J6y4.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -64,6 +67,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_epRFE_hBNjo.png" alt="">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -75,6 +79,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_KeGToDVN0l4.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -86,6 +91,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_4OHkK555s1A.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -107,6 +113,7 @@
                 <div class="product-cards-container">
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_0POwK6iAiRQ.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -118,6 +125,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_caNzzoxls8Q.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -129,6 +137,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_ZV7lnfyQLmA.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -140,6 +149,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_wa5z9o9fgjw.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -161,6 +171,7 @@
                 <div class="product-cards-container">
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_fMP-oCze3AY.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -172,6 +183,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_bUgaIaZysH0.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -183,6 +195,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_sYVY_ZKwaxU.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -195,6 +208,7 @@
                     
                     <div class="card">
                         <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_jMT6BrgBuXU.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -223,6 +237,7 @@
                         </ul>
                     </div>                
                         <form  class="contact-form formulario" name="form" action="./registro_concluido.html" >
+                            <p>Hable con nosotros</p>
                             
                             <div class="input-container">
                                 <input name="name" id="name" class="input" type="text" placeholder="Nombre" required data-tipo="nombre">
