style form input and button

--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
-                        <input name="email" id="email" class="input" type="email" placeholder="Email" required data-tipo="email">
-                        <label class="input-label" for="email">Email</label>
+                        <input name="mensaje" id="mensaje" class="input" type="text" placeholder="Escribe tu mensaje" required data-tipo="mensaje">
+                        <label class="input-label" for="email">Tu mensaje</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="contact-btn">
