--- a/index.html
+++ b/index.html
@@ -101,6 +101,30 @@
                             <a href="#">Ver producto</a>
                         </p>
                     </div>
+                    <div class="card">
+                        <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_R8L1l9RN198.png">
+                            <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
+                            <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
+                        </div>
+                        <p class="card-productName">Producto XYZ</p>
+                        <p class="card-price">$ 60,00</p>
+                         <p class="card-link">
+                            <a href="#">Ver producto</a>
+                        </p>
+                    </div>
+                    <div class="card">
+                        <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_1VV1MRafd7A.png">
+                            <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
+                            <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
+                        </div>
+                        <p class="card-productName">Producto XYZ</p>
+                        <p class="card-price">$ 60,00</p>
+                         <p class="card-link">
+                            <a href="#">Ver producto</a>
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="product-contain">
@@ -150,6 +174,30 @@
                     <div class="card">
                         <div class="card-img-contain">
                             <img class="card-img-contain__product" src="./assets/img/products/unsplash_wa5z9o9fgjw.png">
+                            <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
+                            <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
+                        </div>
+                        <p class="card-productName">Producto XYZ</p>
+                        <p class="card-price">$ 60,00</p>
+                         <p class="card-link">
+                            <a href="#">Ver producto</a>
+                        </p>
+                    </div>
+                    <div class="card">
+                        <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_Zjn4dT993-g.png">
+                            <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
+                            <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
+                        </div>
+                        <p class="card-productName">Producto XYZ</p>
+                        <p class="card-price">$ 60,00</p>
+                         <p class="card-link">
+                            <a href="#">Ver producto</a>
+                        </p>
+                    </div>
+                    <div class="card">
+                        <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_k-xYhI3-gJM.png">
                             <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
                             <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                         </div>
@@ -218,13 +266,37 @@
                             <a href="#">Ver producto</a>
                         </p>
                     </div>
+                    <div class="card">
+                        <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_MxVkWPiJALs.png">
+                            <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
+                            <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
+                        </div>
+                        <p class="card-productName">Producto XYZ</p>
+                        <p class="card-price">$ 60,00</p>
+                         <p class="card-link">
+                            <a href="#">Ver producto</a>
+                        </p>
+                    </div>
+                    <div class="card">
+                        <div class="card-img-contain">
+                            <img class="card-img-contain__product" src="./assets/img/products/unsplash_r27umXAelDc.png">
+                            <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
+                            <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
+                        </div>
+                        <p class="card-productName">Producto XYZ</p>
+                        <p class="card-price">$ 60,00</p>
+                         <p class="card-link">
+                            <a href="#">Ver producto</a>
+                        </p>
+                    </div>
                 </div>
             </div>            
         </section>
 
        
 
-
+`
     </main>
     <footer>
         <section class="contact container" id="contact">
