add eproducto mobile tablet and pc css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./assets/css/form.css">
     <link rel="stylesheet" href="./assets/css/tablet.css" media="(min-width: 700px">
     <link rel="stylesheet" href="./assets/css/pc.css" media="(min-width: 1000px">
-    <title>AluraGeek</title>
+    <title>AluraGeek | Home</title>
 </head>
 <body>
     <header>
