agregar-producto.html responsive mobile tablet pc

--- a/login.html
+++ b/login.html
@@ -42,7 +42,7 @@
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="btn-login-container">
-                        <button class="button">Entrar</a>
+                        <a class="button">Entrar</a>
                     </div>
             </form>
             </div>
@@ -82,7 +82,7 @@
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="contact-btn">
-                        <button class="button">Enviar mensaje</a>
+                        <a class="button">Enviar mensaje</a>
                     </div>
                 </form>
             </div>
