--- a/agregar-producto.html
+++ b/agregar-producto.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/aproducto-mobile.css">
     <link rel="stylesheet" href="./assets/css/form.css">
+    <link rel="stylesheet" href="./assets/css/aproducto-mobile.css">
     <link rel="stylesheet" href="./assets/css/aproducto-tablet.css" media="(min-width: 700px">
     <link rel="stylesheet" href="./assets/css/aproducto-pc.css" media="(min-width: 1000px">
     <title>AluraGeek | Agregar Producto</title>
@@ -23,34 +23,48 @@
                 <input class="input-search" type="search" name="search" id="" placeholder="Que deseas buscar?">
                 <label class="input-label-search" for="search"> <img src="./assets/img/icons/Icone.png" alt=""></label>
             </div>  
-            <div class="header-btn btn-login">
+            <div class="header-btn btn-menuAdmin">
                 <a href="#">Menú Administrador</a>
             </div> 
         </div>
     </div>
 </header>
     <main>
-        <section class="login-container container">
-            <h2 class="card__title">Iniciar Sesión</h2>
-            <div class="card-container">
-                <form action="./agregar-producto.html" class="formulario">
-
-                    <div class="input-container">
-                        <input name="email" id="email" class="input" type="email" placeholder="Escriba su correo electronico" required data-tipo="email">
-                        <label class="input-label" for="email">Escriba su correo electronico</label>
-                        <span class="input-message-error">Este campo no es valido</span>
-                    </div>
-                    <div class="input-container">
-                        <input name="password" id="password" class="input" type="password" placeholder="Contraseña" required pattern="^(?=\w*\d)(?=\w*[A-Z])(?=\w*[a-z])\S{8,16}$" title="Al menos 6 caracteres maximo 12, debe contener una letra minuscula, una letra mayuscula, un numero y no puede contener caracteres especiales" data-tipo="password">
-                        <label class="input-label" for="password">Contraseña</label>
-                        <span class="input-message-error">Este campo no es valido</span>
-                    </div>
-                    <div class="btn-login-container">
-                        <button class="button">Entrar</a>
-                    </div>
+        <section class="aproducto-container container">
+          <div class="card-container">
+            <h2 class="card__title">Agregar nuevo producto</h2>
+            <form action="./agregar-producto.html" class="formulario">
+              <div class="input-container">
+                <input name="url" id="url" class="input" type="url" placeholder="URL de la imagen" required data-tipo="url">
+                <label class="input-label" for="name">URL de la imagen</label>
+                <span class="input-message-error">Este campo no es valido</span>
+              </div>
+              <div class="input-container">
+                <input name="categoria" id="categoria" class="input" type="text" placeholder="Nombre del producto" required data-tipo="categoria">
+                <label class="input-label" for="categoria">Categoria</label>
+                <span class="input-message-error">Este campo no es valido</span>
+              </div>
+              <div class="input-container">
+                <input name="producto-name" id="producto-name" class="input" type="text" placeholder="nombre del producto" required data-tipo="producto-name">
+                <label class="input-label" for="categoria">Nombre del producto</label>
+                <span class="input-message-error">Este campo no es valido</span>
+              </div>
+              <div class="input-container">
+                <input name="producto-precio" id="producto-precio" class="input" type="number" placeholder="precio del producto" required data-tipo="producto-precio">
+                <label class="input-label" for="categoria">Precio del producto</label>
+                <span class="input-message-error">Este campo no es valido</span>
+              </div>
+              <div class="input-container">
+                <input name="descripcion" id="descripcion" class="input" type="text" placeholder="Descripción del producto" required data-tipo="categoria">
+                <label class="input-label" for="categoria">Descripción del producto</label>
+                <span class="input-message-error">Este campo no es valido</span>
+              </div>
+              <div class="btn-aproducto-container">
+                <a class="btn-agregar">Agregar Producto</a>
+              </div>
+            
             </form>
-            </div>
-          
+          </div>
         </section>
 
     </main>
