--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="contact-btn">
-                        <button class="button">Enviar mensaje</a>
+                        <a class="button">Enviar mensaje</a>
                     </div>
                 </form>
             </div>
