add links route

--- a/productos.html
+++ b/productos.html
@@ -31,7 +31,7 @@
               <div class="products-header">
                   <h2>Todos los productos</h2>
                   <p class="btn-agregarProducto">
-                      <a href="#">Agregar producto</a>
+                      <a href="./agregar-producto.html">Agregar producto</a>
                   </p>
               </div>
               <div class="product-cards-container">
