--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="products-header">
                     <h2>Star Wars</h2>
                     <p class="product-header__link">
-                        <a href="#">Ver todo &#8594</a>
+                        <a href="./productos.html">Ver todo &#8594</a>
                     </p>
                 </div>
                 <div class="product-cards-container">
@@ -74,7 +74,7 @@
                         <p class="card-productName">Producto XYZ</p>
                         <p class="card-price">$ 60,00</p>
                          <p class="card-link">
-                            <a href="#">Ver producto</a>
+                            <a href="./productos.html">Ver producto</a>
                         </p>
                     </div>
                     <div class="card">
@@ -131,7 +131,7 @@
                 <div class="products-header">
                     <h2>Consolas</h2>
                     <p class="product-header__link">
-                        <a href="#">Ver todo &#8594</a>
+                        <a href="./productos.html">Ver todo &#8594</a>
                     </p>
                 </div>
                 <div class="product-cards-container">
@@ -213,7 +213,7 @@
                 <div class="products-header">
                     <h2>Diversos</h2>
                     <p class="product-header__link">
-                        <a href="#">Ver todo &#8594</a>
+                        <a href="./productos.html">Ver todo &#8594</a>
                     </p>
                 </div>
                 <div class="product-cards-container">
