add js validador
add form validador

--- a/login.html
+++ b/login.html
@@ -42,11 +42,10 @@
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="btn-login-container">
-                        <a class="button">Entrar</a>
+                        <button class="button">Entrar</button>
                     </div>
             </form>
             </div>
-          
         </section>
 
     </main>
@@ -95,5 +94,6 @@
         </div>
         
     </footer>
+    <script  src="./js/app.js" type="module"></script>
 </body>
 </html>
