--- a/productos.html
+++ b/productos.html
@@ -300,7 +300,7 @@
               Desarrollado por Raul Davila.   <br> 2023
           </p>
       </div>
-      
   </footer>
+  <script  src="./js/app.js" type="module"></script>
   </body>
   </html>
