--- a/agregar-producto.html
+++ b/agregar-producto.html
@@ -100,7 +100,7 @@
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="contact-btn">
-                        <button class="button">Enviar mensaje</a>
+                        <button class="button">Enviar mensaje</button>
                     </div>
                 </form>
             </div>
