--- a/productos.html
+++ b/productos.html
@@ -289,7 +289,7 @@
                       <span class="input-message-error">Este campo no es valido</span>
                   </div>
                   <div class="contact-btn">
-                      <a class="button">Enviar mensaje</a>
+                      <button class="button">Enviar mensaje</button>
                   </div>
               </form>
           </div>
