add homelink logo and ver consolas button link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
 <body>
     <header>
         <div class="header-container">
-            <div class="header-logo logo"></div>
+            <div class="header-logo logo">
+                <a href="./index.html">
+                    <img src="./assets/img/Logo.png" alt="">
+                </a>
+            </div>
 
             <div class="header-contain">
                 <div class="searchBar">
@@ -36,7 +40,7 @@
                     <p class="subtitle">Productos seleccionados con 33% de descuento</p>
                 </div>
                 <div class="header-banner__btn">
-                    <a class="btn-consolas" href="#">Ver Consolas</a>
+                    <a class="btn-consolas" href="#consolas">Ver Consolas</a>
                 </div>
             </div>
             
@@ -127,7 +131,7 @@
                     </div>
                 </div>
             </div>
-            <div class="product-contain">
+            <div class="product-contain" id="consolas">
                 <div class="products-header">
                     <h2>Consolas</h2>
                     <p class="product-header__link">
