--- a/productos.html
+++ b/productos.html
@@ -16,7 +16,11 @@
 <body>
     <header>
         <div class="header-container">
-            <div class="header-logo logo"></div>
+            <div class="header-logo logo">
+                <a href="./index.html">
+                    <img src="./assets/img/Logo.png" alt="">
+                </a>
+            </div>
             <div class="header-contain">
                 <div class="searchBar">
                     <input class="input-search" type="search" name="search" id="" placeholder="Que deseas buscar?">
@@ -26,10 +30,10 @@
         </div>
     </header>
     <main class="main">
-      <section class="products container">
-          <div class="product-contain">
-              <div class="products-header">
-                  <h2>Todos los productos</h2>
+    <section class="products container">
+        <div class="product-contain">
+        <div class="products-header">
+            <h2>Todos los productos</h2>
                   <p class="btn-agregarProducto">
                       <a href="./agregar-producto.html">Agregar producto</a>
                   </p>
