--- a/login.html
+++ b/login.html
@@ -16,7 +16,11 @@
 <body>
     <header>
         <div class="header-container">
-            <div class="header-logo logo"></div>
+            <div class="header-logo logo">
+                <a href="./index.html">
+                    <img src="./assets/img/Logo.png" alt="">
+                </a>
+            </div>
             <div class="header-contain">
                 <div class="searchBar">
                     <input class="input-search" type="search" name="search" id="" placeholder="Que deseas buscar?">
