add max length to name and message form inputh

--- a/message-send.html
+++ b/message-send.html
@@ -4,9 +4,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/form.css">
+  <link rel="stylesheet" href="./assets/css/tablet.css" media="(min-width: 700px">
+  <link rel="stylesheet" href="./assets/css/pc.css" media="(min-width: 1000px">
   <title>AluraGeek | Mensaje enviado</title>
 </head>
+<header>
+  <div class="header-container">
+      <div class="header-logo logo">
+          <a href="./index.html">
+              <img src="./assets/img/Logo.png" alt="">
+          </a>
+      </div>
+
+      <div class="header-contain">
+          <div class="searchBar">
+              <input class="input-search" type="search" name="search" id="" placeholder="Que deseas buscar?">
+              <label class="input-label-search" for="search"> <img src="./assets/img/icons/Icone.png" alt=""></label>
+          </div>  
+          <div class="header-btn btn-login">
+              <a href="./login.html">Login</a>
+          </div> 
+      </div>
+      
+  </div>
+</header>
 <body>
-  <h1>Mensaje enviado</h1>
+  <a href="./index.html">
+  <h1 style="display: flex; justify-content: center; align-items: center; padding: 32px;">Mensaje enviado</h1>
+  </a>
 </body>
 </html>
