--- a/index.html
+++ b/index.html
@@ -324,12 +324,12 @@
                     <p>Hable con nosotros</p>
                     
                     <div class="input-container">
-                        <input name="name" id="name" class="input" type="text" placeholder="Nombre" required data-tipo="nombre">
+                        <input name="name" id="name" class="input" type="text" placeholder="Nombre" maxlength="40" required data-tipo="nombre">
                         <label class="input-label" for="name">Nombre</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
                     <div class="input-container">
-                        <input name="mensaje" id="mensaje" class="input" type="text" placeholder="Escribe tu mensaje" required data-tipo="mensaje">
+                        <input name="mensaje" id="mensaje" class="input" type="text" placeholder="Escribe tu mensaje" maxlength="120" required data-tipo="mensaje">
                         <label class="input-label" for="email">Tu mensaje</label>
                         <span class="input-message-error">Este campo no es valido</span>
                     </div>
