--- a/agregar-producto.html
+++ b/agregar-producto.html
@@ -119,6 +119,7 @@
         
     </footer>
     <script  src="./js/app.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./js/aproduct.js"></script>
 </body>
 </html>
