producto-controler.js funcional

--- a/Error.html
+++ b/Error.html
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="./assets/css/aproducto-mobile.css">
     <link rel="stylesheet" href="./assets/css/aproducto-tablet.css" media="(min-width: 700px">
     <link rel="stylesheet" href="./assets/css/aproducto-pc.css" media="(min-width: 1000px">
-    <title>AluraGeek | registro de Producto</title>
+    <title>AluraGeek | Error</title>
 </head>
 <main>
   <section class="registro-completo container">
     <div class="card-container">
-      <h2 class="card-title">Registro completado!</h2>
+      <h2 class="card-title">Algo Salio Mal!!!</h2>
       <div class="button">
-        <a href="./productos.html">Administrador de productos</a>
+        <a href="./agregar-producto.html">regresar</a>
       </div>
     </div>
   </section>
