--- a/menu-admin.html
+++ b/menu-admin.html
@@ -38,12 +38,13 @@
                     <a href="./agregar-producto.html">Agregar producto</a>
                 </p>
         </div>
-        <div class="product-cards-container">
+        <div class="product-cards-container" data-producto>
             <div class="card">
                 <div class="card-img-contain">
                     <img class="card-img-contain__product" src="./assets/img/products/unsplash_6FDXGY9J6y4.png">
                     <div class= "icons" > 
-                        <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">      <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
+                        <img class="trash-icon" src="./assets/img/icons/delete_black_24dp (1) 1.png" alt="trash" class="img-icon">
+                        <img class="edit-icon" src="./assets/img/icons/edit_black_24dp 1.png" alt="edit" class="img-icon">
                     </div>
                 </div>
                 <p class="card-productName">Producto XYZ</p>
@@ -96,5 +97,6 @@
     </div>
     </footer>
     <script  src="./js/app.js" type="module"></script>
+    <script type="module" src="./controllers/producto-controller.js"></script>
     </body>
 </html>
