redireccion a menu-admin.html

--- a/agregar-producto.html
+++ b/agregar-producto.html
@@ -56,12 +56,12 @@
                 <span class="input-message-error">Este campo no es valido</span>
               </div>
               <div class="input-container">
-                <input name="producto-name" id="producto-name" class="input" type="text" placeholder="nombre del producto" maxlength="20" required data-tipo="producto-name" data-nombre>
+                <input name="producto-name" id="producto-name" class="input" type="text" placeholder="nombre del producto" maxlength="20" required data-tipo="productonombre" data-nombre>
                 <label class="input-label" for="categoria">Nombre del producto</label>
                 <span class="input-message-error">Este campo no es valido</span>
               </div>
               <div class="input-container">
-                <input name="producto-precio" id="producto-precio" class="input" type="number" placeholder="precio del producto" maxlength="20" required data-tipo="producto-precio" data-precio>
+                <input name="producto-precio" id="producto-precio" class="input" type="number" placeholder="precio del producto" maxlength="20" required data-tipo="productoprecio" data-precio>
                 <label class="input-label" for="categoria">Precio del producto</label>
                 <span class="input-message-error">Este campo no es valido</span>
               </div>
@@ -125,7 +125,7 @@
     </footer>
     <script  src="./js/app.js" type="module"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./js/aproduct.js"></script>
+<!--     <script src="./js/aproduct.js"></script>-->
     <script src="./controllers/registro-controller.js" type="module"></script>
 </body>
 </html>
