--- a/registro-completado.html
+++ b/registro-completado.html
@@ -18,7 +18,7 @@
     <div class="card-container">
       <h2 class="card-title">Registro completado!</h2>
       <div class="button">
-        <a href="./productos.html">Administrador de productos</a>
+        <a href="./menu-admin.html">Administrador de productos</a>
       </div>
     </div>
   </section>
